# MuseeSecuriseVirtuel

./: .gitignore  README.md
Bibliographie/: Biblio.md
code/: BasePermutation.h  CMakeLists.txt  NaivePermutation.h  README.md  blockPermutation.cpp  catmap.cpp  createOeuvre.cpp  decryptOeuvre.cpp  detectSheet.cpp  imageanalysis.h  naive.cpp  oeuvredetection-2.cpp  oeuvredetection.cpp  toolFunctions.hpp
code/snippets/: CMakeLists.txt  FindSquare.cpp  chain_oeuvre_process.bash  permutation.cpp  resultAnalysis.cpp  valid_installation_opencv.cpp
